test/files/neg/wellkinded_bounds.scala
// test well-kindedness checks -- syntax error
class WellKindedWrongSyntax[s <: List] { // must be s[x] <: List[x]
}
